scrollbar and firebaseApi fixes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,16 +16,31 @@ html {
   font-size: 16px;
   margin: 0 0 0 0;
   padding: 0;
+  overflow-y: hidden;
+}
+body {
+  overflow-y: scroll;
 }
 body,
 html {
   height: calc(100% - 2.0rem);
-  /* margin-bottom: 50px; */
-  overflow: scroll;
 }
 section {
-  overflow: scroll;
+  /* overflow-y: scroll; */
+  padding: 0;
+  margin: 0;
 }
+/* --------------------Scrollbar styling */
+/* #scroll-it::-webkit-scrollbar-track {
+	-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+	background-color: #F5F5F5;
+}
+#scroll-it::-webkit-scrollbar-thumb {
+	background-color: #000000;
+	border: 2px solid #555555;
+} */
+/* ----------------end Scrollbar styling */
+
 h1, h2, h3 {
 
 }
@@ -186,7 +201,7 @@ a img {
   bottom: 0;
   left: 0;
   height: 3rem;
-
+  width: 100%;
 }
 .navbar-fixed-bottom {
   width: 100%;
